feat: implemented schema endpoints
