# openapi3.yaml
@@ -117,15 +117,15 @@ paths:
           $ref: '#/components/responses/404NotFound'
         '500':
           $ref: '#/components/responses/500InternalServerError'
-  /schema/{path}:
+  /schema:
     get:
       parameters:
-        - name: path
-          in: path
-          description: The relative path of the schema as defined in the schema id
+        - name: id
+          in: query
+          description: The id of the requested schema
           required: true
           schema: 
-            type: string
+            $ref: '#/components/schemas/schemaId'
         - name: shouldDereference
           in: query
           description: should the server bundle all refs into one schema
@@ -146,7 +146,7 @@ paths:
           $ref: '#/components/responses/404NotFound'
         '500':
           $ref: '#/components/responses/500InternalServerError'
-  /schema:
+  /schema/tree:
     get:
       operationId: getSchemasTree
       summary: return a tree representation of all the schemas
